test_data/Json/Unexpected/Unserializable/InvalidModelType/Property/wrong.json.exception
Expected the model type 'Property', but got soReallyUtterlyInvalid at: modelType